feat: api update user
