# storage/api-docs/api-docs.json
@@ -596,7 +596,7 @@
                     "Users"
                 ],
                 "summary": "Obtener usuarios",
-                "operationId": "6d5b72038ed4abf362868c76845f5d14",
+                "operationId": "getUsers",
                 "responses": {
                     "200": {
                         "description": "Lista de usuarios",
@@ -671,7 +671,7 @@
                     "Users"
                 ],
                 "summary": "Obtener información de un usuario por su ID",
-                "operationId": "b0a4bd6db558e0572348745baa77de3f",
+                "operationId": "getUserById",
                 "parameters": [
                     {
                         "name": "id",
@@ -848,7 +848,7 @@
                     "Users"
                 ],
                 "summary": "Buscar usuarios por término",
-                "operationId": "60be1d731dbcc0d5d274acc5eaf7a40f",
+                "operationId": "searchUsuariosByTerm",
                 "parameters": [
                     {
                         "name": "term",
@@ -1006,7 +1006,7 @@
                     "Users"
                 ],
                 "summary": "Crear un nuevo usuario",
-                "operationId": "4e740ffe4280e2044eeaba5dba22a088",
+                "operationId": "createUser",
                 "requestBody": {
                     "description": "Datos del nuevo usuario",
                     "required": true,
@@ -1139,6 +1139,234 @@
                     }
                 ]
             }
+        },
+        "/api/users/update/{id}": {
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Actualizar un usuario existente",
+                "operationId": "updateUser",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID del usuario a actualizar",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Datos para actualizar el usuario",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "person": {
+                                        "properties": {
+                                            "names": {
+                                                "type": "string"
+                                            },
+                                            "last_names": {
+                                                "type": "string"
+                                            },
+                                            "email": {
+                                                "type": "string"
+                                            },
+                                            "phone": {
+                                                "type": "string"
+                                            },
+                                            "birth_date": {
+                                                "type": "string",
+                                                "format": "date"
+                                            },
+                                            "identification": {
+                                                "type": "string"
+                                            },
+                                            "identification_type": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    },
+                                    "role": {
+                                        "type": "string"
+                                    },
+                                    "active": {
+                                        "type": "boolean"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Respuesta exitosa al actualizar el usuario",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Usuario actualizado correctamente"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "user": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer"
+                                                        },
+                                                        "email": {
+                                                            "type": "string"
+                                                        },
+                                                        "person": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "type": "integer"
+                                                                },
+                                                                "names": {
+                                                                    "type": "string"
+                                                                },
+                                                                "last_names": {
+                                                                    "type": "string"
+                                                                },
+                                                                "email": {
+                                                                    "type": "string"
+                                                                },
+                                                                "phone": {
+                                                                    "type": "string"
+                                                                },
+                                                                "birth_date": {
+                                                                    "type": "string",
+                                                                    "format": "date"
+                                                                },
+                                                                "identification": {
+                                                                    "type": "string"
+                                                                },
+                                                                "identification_type": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        },
+                                                        "role": {
+                                                            "properties": {
+                                                                "id": {
+                                                                    "type": "integer"
+                                                                },
+                                                                "name": {
+                                                                    "type": "string"
+                                                                }
+                                                            },
+                                                            "type": "object"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error de validación de datos",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Error de autenticación",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "error"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Error de validación de datos",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error interno del servidor",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "string",
+                                            "example": "error"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Error al actualizar el usuario"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -1219,30 +1447,36 @@
                 "properties": {
                     "id": {
                         "type": "integer",
-                        "format": "int64"
+                        "format": "int64",
+                        "example": 1
                     },
                     "email": {
-                        "type": "string"
+                        "type": "string",
+                        "example": "user@example.com"
                     },
                     "password": {
                         "type": "string"
                     },
                     "person": {
+                        "description": "ID de la persona asociada",
                         "type": "fk_person"
                     },
                     "active": {
                         "type": "boolean",
-                        "default": true
+                        "default": true,
+                        "example": true
                     },
                     "archived": {
                         "type": "boolean",
-                        "default": false
+                        "default": false,
+                        "example": false
                     },
                     "created_at": {
                         "type": "string",
                         "format": "date-time"
                     },
                     "archived_by": {
+                        "description": "ID del usuario que lo archivó",
                         "type": "fk_users"
                     },
                     "updated_at": {
